# open-pets

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
assets/codex/open-pets-codex/: pet.json
crates/pet-engine/: Cargo.toml
crates/pet-engine/src/: event.rs  lib.rs  memory.rs  mood.rs  reaction.rs  species.rs  stats.rs  xp.rs
crates/pet-engine/tests/: engine_test.rs  mood_test.rs  species_test.rs  xp_test.rs
crates/pet-overlay/: Cargo.toml
crates/pet-overlay/src/: app.rs  db.rs  main.rs  status_panel.rs
crates/pet-sync/: Cargo.toml
crates/pet-sync/src/: config.rs  lib.rs  opencode_state.rs  reaction_pipeline.rs  session_tracker.rs
crates/pet-sync/tests/: sync_test.rs
crates/pet-tui/: Cargo.toml
crates/pet-tui/src/: main.rs
docs/superpowers/plans/: 2026-05-07-open-pets-phase1-pet-engine.md
docs/superpowers/specs/: 2026-05-07-open-pets-design.md
skills/pet/: SKILL.md
tools/: generate_sprites.py  package_codex_pet.py
