[workspace]
members = ["crates/pet-engine", "crates/pet-tui", "crates/pet-overlay", "crates/pet-sync"]
resolver = "2"

# Cross-platform packaging via cargo-dist
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI
cargo-dist-version = "0.28.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for
targets = ["x86_64-pc-windows-msvc", "x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "aarch64-apple-darwin"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

[workspace.metadata.dist.dependencies.apt]
libxkbcommon-dev = "*"
libxcb1-dev = "*"
libxcb-render0-dev = "*"
libxcb-shape0-dev = "*"
libxcb-xfixes0-dev = "*"
libdbus-1-dev = "*"

[workspace.metadata.dist.dependencies.brew]
libxkbcommon = "*"
dbus = "*"






