[package]
name = "pet-overlay"
version = "0.1.0"
edition = "2021"
description = "Iced GUI overlay window for open-pets desktop companion"

[dependencies]
iced = { version = "0.13", features = ["image", "tokio"] }
iced_runtime = "0.13"
pet-engine = { path = "../pet-engine" }
pet-sync = { path = "../pet-sync" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
image = { version = "0.24", features = ["png"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
