[package]
name = "pet-sync"
version = "0.1.0"
edition = "2021"
description = "OpenCode state monitoring and pet reaction pipeline"

[dependencies]
pet-engine = { path = "../pet-engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
dirs = "5"
